k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentra-backend
  namespace: blind-spot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentra-backend
  template:
    metadata:
      labels:
        app: sentra-backend
    spec:
      containers:
      - name: sentra-backend
        image: praktikan/sentra-backend:latest
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: sentra-backend
  namespace: blind-spot
spec:
  selector:
    app: sentra-backend
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
