k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentra-ingress
  namespace: blind-spot
spec:
  ingressClassName: nginx
  rules:
  - host: blind-spot.hackathon.sev-2.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: sentra-backend
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sentra-frontend
            port:
              number: 3000
